<resources>
    <string name="app_name">Coroutines</string>

    <string name="counter">Counter</string>
    <string name="sum">Sum</string>
    <string name="location">Location</string>
    <string name="random_api">Random API</string>
    <string name="favorite_users">Favorite users</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="throw_label">Throw</string>
    <string name="sum_operation">+</string>
    <string name="calculate">Calculate</string>
    <string name="latitude">Lat: %1$f</string>
    <string name="longitude">Lon: %1$f</string>
    <string name="get_last_location">Get last location</string>
    <string name="get_location">Get location</string>
</resources>