<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="@dimen/default_margin">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/counter_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sum_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counter_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/location_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sum_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/random_api_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/random_api"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>